refactor the preview component to improve it

--- a/src/shared/i18n/locales/en.json
+++ b/src/shared/i18n/locales/en.json
@@ -30,5 +30,8 @@
     "fadeWhite": "Fade White",
     "addTransition": "Add transition",
     "clipsTooShort": "Clips too short for transitions"
+  },
+  "preview": {
+    "addVideosToStart": "Add videos to get started"
   }
 }
